Fix inpage actions layout on IE11

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -221,12 +221,12 @@
    ========================================================================== */
 
 .inpage__actions {
-  grid-column: auto / span 4;
-  justify-self: end;
-  align-self: flex-start;
+  grid-column: 9 / span 4;
   padding: ($global-spacing / 2) 0;
   display: flex;
   flex-flow: row nowrap;
+  justify-content: flex-end;
+  align-items: flex-start;
 
   > * {
     margin: 0 ($global-spacing / 8);
